--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ test/
 # Generated Files
 #
 
-*.xml
 src/foo/
 src/caro/
 src/galabu/
@@ -90,3 +89,4 @@ local.properties
 # Code Recommenders
 .recommenders/
 /bin1/
+/target/
