--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
   <groupId>bn.blaszczyk</groupId>
   <artifactId>RoseService</artifactId>
   <version>0.28</version>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty.aggregate</groupId>
@@ -12,24 +15,8 @@
     </dependency>
     <dependency>
       <groupId>bn.blaszczyk</groupId>
-      <artifactId>ROSE</artifactId>
-      <version>0.106</version>
-    </dependency>
-    <dependency>
-      <groupId>bn.blaszczyk</groupId>
       <artifactId>RoseCommon</artifactId>
       <version>0.30</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.11</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.2.2</version>
-      <scope/>
     </dependency>
   </dependencies>
   <build>
