--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,13 @@
     <dependency>
       <groupId>org.eclipse.jetty.aggregate</groupId>
       <artifactId>jetty-all</artifactId>
-      <version>9.2.21.v20170120</version>
+      <version>9.4.8.v20171121</version>
+      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>bn.blaszczyk</groupId>
       <artifactId>rose-common</artifactId>
-      <version>0.46</version>
+      <version>0.47</version>
     </dependency>
   </dependencies>
   <build>
